fixup! Fixes #26105: The statistics on the dashboard are hardly readable
Fixes #26105: The statistics on the dashboard are hardly readable

--- a/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-dashboard.scss
+++ b/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-dashboard.scss
@@ -19,7 +19,7 @@
 
 .rudder-template .homePage .panel,
 .rudder-template .homePage .card{
-  margin-bottom: 30px;
+  height: 100%;
   border-radius: 12px;
   box-shadow: 0 10px 20px 6px #dce3ef63;
   border: none !important;
